--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "frontend-text",
+  "name": "frontend-test",
   "version": "1.0.0",
   "description": "A simple frontend development test",
   "main": "app.js",
