--- a/.babelrc
+++ b/.babelrc
@@ -2,6 +2,7 @@
   "plugins": [
     "@babel/plugin-transform-runtime",
     "@babel/plugin-syntax-dynamic-import",
+    "@babel/plugin-proposal-class-properties"
   ],
   "presets": [
     "@babel/preset-env"
